--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,11 +1,39 @@
-div
+h1
 {
-    color: yellow;
+    color: rgb(255, 255, 0);
     text-align: center;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 
-div.img
+.img
 {
     align-items: center;
+}
+.descrip
+{
+    text-align: left;
+    grid-area: descrip;
+}
+ol
+{
+    text-align: left;
+}
+.contain
+{
+    font-family: sans-serif;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  grid-template-areas: 
+  "descrip descrip"
+  "Steps Ingredients";
+}
+.Ingredients
+{
+    grid-area: Ingredients;
+}
+.Steps
+{
+    grid-area: Steps;
 }
